--- a/templates/tad_evaluation_index.html
+++ b/templates/tad_evaluation_index.html
@@ -1,6 +1,5 @@
 <{$bootstrap}>
 <{$jquery}>
-<{$tab_ui}>
 <{$toolbar}>
 
 <!--列出所有資料-->
@@ -55,6 +54,8 @@
   <link rel="stylesheet" type="text/css" href="<{$xoops_url}>/modules/tadtools/fancyBox/source/helpers/jquery.fancybox-thumbs.css?v=1.0.7" />
   <script type="text/javascript" src="<{$xoops_url}>/modules/tadtools/fancyBox/source/helpers/jquery.fancybox-thumbs.js?v=1.0.7"></script>
   <script type="text/javascript" src="<{$xoops_url}>/modules/tadtools/fancyBox/source/helpers/jquery.fancybox-media.js?v=1.0.5"></script>
+  </script>
+
 
   <script type="text/javascript">
   $(document).ready(function(){
@@ -70,36 +71,25 @@
 
   });
   </script>
+  <h1><{$evaluation_title}></h1>
+  <div class="well">
+    <a href="#" onclick="jQuery('#treetbl<{$evaluation_sn}>').treetable('expandAll'); return false;" class="btn btn-mini"><{$smarty.const._MD_TADEVALUA_EXPAND_ALL}></a>
+    <a href="#" onclick="jQuery('#treetbl<{$evaluation_sn}>').treetable('collapseAll'); return false;" class="btn btn-mini"><{$smarty.const._MD_TADEVALUA_COLLAPSE_ALL}></a>
+    <div class="row-fluid">
 
-  <h2 class="text-center"><{$title}></h2>
-  <{if $evaluation_description}>
-  <div class="row-fluid">
-    <div class="well">
-      <{$evaluation_description}>
+      <{if $db_files}>
+        <div class="span12">
+          <{$db_files}>
+        </div>
+      <{else}>
+        <div class="hero-unit">
+          <{$smarty.const._MD_TADEVALUA_EVALUATION_EMPTY}>
+        </div>
+      <{/if}>
     </div>
   </div>
-  <{/if}>
 
-  <{if $evaluation_files}>
-    <div class="row-fluid">
-      <div class="span12">
-        <{if $use_tab=='1'}>
-          <div id="evaluation_sn_tabs">
-            <ul>
-              <{$db_files.title}>
-            </ul>
-            <{$db_files.content}>
-          </div>
-        <{else}>
-          <{$db_files}>
-        <{/if}>
-      </div>
-    </div>
-  <{else}>
-    <div class="hero-unit">
-      <{$smarty.const._MD_TADEVALUA_EVALUATION_EMPTY}>
-    </div>
-  <{/if}>
+
   <{if $isAdmin}>
   <div class="row-fluid text-right">
     <a href="admin/main.php?evaluation_sn=<{$evaluation_sn}>" class="btn btn-warning"><{$smarty.const._TAD_EDIT}></a>
