修正影片播放大小不正確的問題。修正若沒有目錄只有檔案時，無法讀出檔案的bug。

--- a/templates/tad_evaluation_index.html
+++ b/templates/tad_evaluation_index.html
@@ -63,7 +63,7 @@
     fitToView : true,
     width   : '90%',
     height    : '100%',
-    autoSize  : true,
+    autoSize  : false,
     closeClick  : false,
     openEffect  : 'none',
     closeEffect : 'none'
