可設定不經由google doc，直接下載開啟檔案，.可以設定各階層的外觀（從偏好設定）

--- a/templates/tad_evaluation_index.html
+++ b/templates/tad_evaluation_index.html
@@ -1,7 +1,11 @@
 <{$bootstrap}>
 <{$jquery}>
 <{$toolbar}>
-
+<{if $level_css}>
+  <style>
+    <{$level_css}>
+  </style>
+<{/if}>
 <!--列出所有資料-->
 <{if $all_content}>
   <{if $isAdmin}>
