--- a/templates/tad_evaluation_adm_main_b3.html
+++ b/templates/tad_evaluation_adm_main_b3.html
@@ -77,7 +77,7 @@
 
     <{$bar}>
   <{elseif $now_op=="list_tad_evaluation"}>
-    <div class="hero-unit">
+    <div class="jumbotron text-center">
       <{if $isAdmin}>
         <a href="<{$action}>?op=tad_evaluation_form" class="btn btn-info"><{$smarty.const._TAD_ADD}></a>
       <{/if}>
@@ -92,30 +92,34 @@
     <link rel="stylesheet" href="<{$xoops_url}>/modules/tadtools/css/iconize.css" type="text/css" media="all" />
 
     <{$formValidator_code}>
-    <div class="row-fluid">
-      <div class="span12">
+    <div class="row">
+      <div class="col-md-12">
         <form action="<{$action}>" method="post" id="myForm" enctype="multipart/form-data" class="form-horizontal" role="form">
-          <div class="control-group">
-            <label class="span2 control-label">
+          <div class="form-group">
+            <label class="col-md-2 control-label">
             <{$smarty.const._MA_TADEVALUA_EVALUATION_TITLE}>
             </label>
-            <div class="span4 controls">
-              <input type="text" name="evaluation_title" id="evaluation_title" class="span12" value="<{$evaluation_title}>" placeholder="<{$smarty.const._MA_TADEVALUA_EVALUATION_TITLE}>">
+            <div class="col-md-4">
+              <input type="text" name="evaluation_title" id="evaluation_title" class="form-control" value="<{$evaluation_title}>" placeholder="<{$smarty.const._MA_TADEVALUA_EVALUATION_TITLE}>">
             </div>
-            <label class="span2 control-label">
+            <label class="col-md-2 control-label">
             <{$smarty.const._MA_TADEVALUA_EVALUATION_ENABLE}>
             </label>
-            <div class="span4 controls">
-              <label class="radio inline">
+            <div class="col-md-4">
+              <label class="radio-inline">
                 <input type="radio" name="evaluation_enable" id="evaluation_enable_1" value="1" <{if $evaluation_enable == "1"}>checked="checked"<{/if}>><{$smarty.const._YES}>
               </label>
-              <label class="radio inline">
+              <label class="radio-inline">
                 <input type="radio" name="evaluation_enable" id="evaluation_enable_0" value="0" <{if $evaluation_enable == "0"}>checked="checked"<{/if}>><{$smarty.const._NO}>
               </label>
             </div>
           </div>
 
-          <{$evaluation_description_editor}>
+          <div class="form-group">
+            <div class="col-md-12">
+              <{$evaluation_description_editor}>
+            </div>
+          </div>
 
           <div class="text-center">
             <!--評鑑編號-->
@@ -132,14 +136,14 @@
 
     <{if $evaluation_sn}>
       <div class="well">
-        <div class="row-fluid">
+        <div class="row">
 
           <{if $all_files}>
           <form action="<{$action}>" method="post" id="myForm" enctype="multipart/form-data">
 
             <input type="hidden" name="op" value="tad_evaluation_import">
             <input type="hidden" name="evaluation_sn" value="<{$evaluation_sn}>">
-            <div class="span6">
+            <div class="col-md-6">
               <i class="fa fa-folder-open"></i> <{$dir_count}>
               <i class="fa fa-file-text-o"></i> <{$file_count}>
               <i class="fa fa-trash-o"></i> <{$pass_count}>
@@ -152,7 +156,7 @@
             </div>
           </form>
           <{else}>
-            <div class="span6 hero-unit">
+            <div class="col-md-6 jumbotron text-center">
               <{$smarty.const._MA_TADEVALUA_EVALUATION_IMPORT_PATH}><br>
               <div style="color:blue;"><{$evaluation_path}></div>
             </div>
@@ -160,7 +164,7 @@
 
           <{if $all_files}>
             <form action="<{$action}>" method="post" id="myForm" enctype="multipart/form-data">
-              <div class="span6" id='sort'>
+              <div class="col-md-6" id='sort'>
               <i class="fa fa-folder-open"></i> <{$dir_count2}>
               <i class="fa fa-file-text-o"></i> <{$file_count2}>
                 <{$db_files}>
@@ -173,7 +177,7 @@
               </div>
             </form>
           <{else}>
-            <div class="span6 hero-unit">
+            <div class="col-md-6 jumbotron text-center">
               <{$smarty.const._MA_TADEVALUA_EVALUATION_IMPORT_FILES}>
             </div>
           <{/if}>
