修改程式，使之符合無障礙網頁規範

--- a/templates/tad_evaluation_index_b3.html
+++ b/templates/tad_evaluation_index_b3.html
@@ -52,8 +52,8 @@
 
   <h1><{$evaluation_title}></h1>
   <div class="well">
-    <a href="#" onclick="jQuery('#treetbl<{$evaluation_sn}>').treetable('expandAll'); return false;" class="btn btn-default btn-xs"><{$smarty.const._MD_TADEVALUA_EXPAND_ALL}></a>
-    <a href="#" onclick="jQuery('#treetbl<{$evaluation_sn}>').treetable('collapseAll'); return false;" class="btn btn-default btn-xs"><{$smarty.const._MD_TADEVALUA_COLLAPSE_ALL}></a>
+    <a href="#" onclick="jQuery('#treetbl<{$evaluation_sn}>').treetable('expandAll'); return false;" onkeypress="jQuery('#treetbl<{$evaluation_sn}>').treetable('expandAll'); return false;" class="btn btn-default btn-xs"><{$smarty.const._MD_TADEVALUA_EXPAND_ALL}></a>
+    <a href="#" onclick="jQuery('#treetbl<{$evaluation_sn}>').treetable('collapseAll'); return false;" onkeypress="jQuery('#treetbl<{$evaluation_sn}>').treetable('collapseAll'); return false;" class="btn btn-default btn-xs"><{$smarty.const._MD_TADEVALUA_COLLAPSE_ALL}></a>
     <div class="row">
 
       <{if $db_files}>
